# SplatTop

./: .env.example  .gitignore  .python-version  .sops.yaml  BLOG_README.md  GHOST_BLOG_SETUP.md  LOCALIZING.md  Makefile  README.md  STRAPI_BLOG_SETUP.md  STYLE_BIBLE.md  dockerfile  pyproject.toml
.github/workflows/: build_and_upload_dockerfiles.yaml  claude-code-review.yml  claude.yml  manual_helm_deploy.yaml  monitoring-snapshots.yml  sync_competition_admins_to_config.yml  update-k8s-deployment.yaml  update_assets.yml  update_discord_bot.yaml  update_i18n.yaml  update_k8s_deployment.yaml
argocd/: README.md
argocd/applications/: splattop-applicationset.yaml  splattop-dev.yaml  splattop-prod.yaml
argocd/projects/: splattop-project.yaml
dockerfiles/: dockerfile.celery  dockerfile.discord  dockerfile.fast-api  dockerfile.flask  dockerfile.react
docs/: infrastructure-and-release.md  observability.md
helm/splattop/: .helmignore  Chart.yaml  README.md  values-local.yaml  values-prod.yaml  values.dev.yaml  values.yaml
i18n/: CNzh.json  EUen.json  JPja.json  USen.json  USes.json
k8s/: certificate.yaml  cluster-issuer.template  ingress-dev.yaml  ingress.yaml  secrets.template
k8s/celery-beat/: celery-beat-deployment-dev.yaml  celery-beat-deployment.yaml
k8s/celery-worker/: celery-worker-deployment-dev.yaml  celery-worker-deployment.yaml  celery-worker-service.yaml
k8s/fast-api/: fast-api-deployment-dev.yaml  fast-api-deployment.yaml  fast-api-service-dev.yaml  fast-api-service.yaml
k8s/flask/: flask-deployment-dev.yaml  flask-deployment.yaml  flask-service-dev.yaml  flask-service.yaml
k8s/ghost/: ghost-deployment-dev.yaml  ghost-pvc-dev.yaml  ghost-service-dev.yaml
k8s/monitoring/: networkpolicy-acme-solver.yaml  networkpolicy-default-deny.yaml  prometheus-cilium-egress.yaml
k8s/react/: react-deployment-dev.yaml  react-deployment.yaml  react-service-dev.yaml  react-service.yaml
k8s/redis/: redis-deployment.yaml
k8s/splatgpt/: splatgpt-deployment-dev.yaml  splatgpt-deployment.yaml  splatgpt-service.yaml
k8s/strapi/: strapi-deployment-dev.yaml  strapi-service-dev.yaml
migrations/: 001_create_blog_posts.sql
scripts/: competition_admins.py  create_monitoring_snapshots.py  generate_api_admin_secrets.py  i18n.py  query_sendou_threshold_accounts.py  scrape_sendou_linked_players.py  update_assets.py  validate_prometheus_config.py
scripts/utils/: constants.py  datamine.py  languages.py  spaces.py  supported_languages.json
secrets/competition-admins/: comp-auth-secrets.enc.yaml
splat_top/: __main__.py  app.py  constants.py  db.py  sql_types.py  utils.py
splat_top/routes/: front_page.py
splat_top/templates/: base.html  charts.html  faq.html  header.html  jackpot.html  leaderboard.html  player.html  search.html
src/celery_app/: app.py  beat.py  connections.py  database.py  metrics.py  tasks.py
src/celery_workers/: tasks.py
src/discord_bot/: app.py  bot.py  clients.py  constants.py  extensions.py  function_router.py  utils.py
src/fast_api_app/: __init__.py  app.py  auth.py  background_tasks.py  comp_auth.py  connections.py  deployments.py  feature_flags.py  memory_sqlite.py  metrics.py  middleware.py  pubsub.py  sqlite_lookup_store.py  utils.py
src/flask_app/: __init__.py  app.py  background_tasks.py  celery_tasks.py  connections.py  database.py  memory_sqlite.py  pubsub.py  utils.py
src/react_app/: custom-nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tailwind.v4.config.js
src/shared_lib/: analytics.py  constants.py  db.py  models.py  payload_utils.py  queries.py  sendou_linked_players.py  sqlite_lookup_snapshot.py  turbo_stream.py  utils.py
src/splat_top/: __main__.py  app.py  constants.py  models.py  sql_types.py  utils.py
terraform/digitalocean_infra/: main.tf
terraform/discord/: discord.tf
tests/: conftest.py  test_admin_tokens.py  test_app_startup.py  test_archive_leaderboard.py  test_auth.py  test_background_tasks.py  test_canonical_api_paths.py  test_competition_admins_script.py  test_front_page_cache_optimizations.py  test_lookup_snapshot_routes.py  test_metrics.py  test_race_to_5000.py  test_rate_limit.py  test_ripple.py  test_skill_offset.py
tests/admin/: test_admin_celery.py  test_admin_default_scopes.py  test_admin_expires.py  test_admin_list_and_revoke.py  test_admin_validations.py  test_token_race_condition.py
tests/auth/: test_admin_header.py  test_auth_critical.py  test_backend_unavailable.py  test_comp_auth.py  test_headers.py  test_parse_token.py  test_revoked_and_invalid.py  test_scopes_invalid_json_allows.py  test_scopes_security.py
tests/celery/: test_api_usage_flush.py  test_beat.py  test_player_detail_locking.py  test_player_detail_progressive.py  test_ripple_snapshot.py  test_ripple_snapshot_MIGRATION.md  test_ripple_snapshot_adversarial.py  test_ripple_snapshot_beat_simulation.py  test_ripple_snapshot_core.py  test_ripple_snapshot_deltas.py  test_ripple_snapshot_edge_cases.py  test_ripple_snapshot_errors.py  test_ripple_snapshot_locks.py  test_ripple_snapshot_previous_payload.py  (+4 more)
(+423 files in other folders)
