[project]
name = "splat_top"
version = "0.2.0"
description = ""
authors = [{ name = "Cesar E Garza", email = "cesar@cegarza.com" }]
requires-python = ">=3.10.0, <3.12"
readme = "README.md"
dependencies = [
    "sqlalchemy>=2.0.20,<3",
    "psycopg2-binary>=2.9.7,<3",
    "python-dotenv>=1.0.0,<2",
    "celery>=5.3.6,<6",
    "redis>=5.0.3,<6",
    "fastapi>=0.110.2,<0.111",
    "uvicorn[standard]>=0.29.0,<0.30",
    "asyncpg>=0.29.0,<0.30",
    "pandas>=2.2.2,<3",
    "orjson>=3.10.1,<4",
    "cryptography>=42.0.0,<43",
    "slowapi>=0.1.9,<0.2",
    "gunicorn>=22.0.0,<23",
    "scipy>=1.13.1,<2",
    "cachetools>=5.3.3,<6",
    "httpx>=0.27.2,<0.28",
    "requests>=2.31.0,<3",
    "numpy>=1.26.0,<2",
    "prometheus-client>=0.20.0,<1",
    "htpasswd>=2.3",
    "kubernetes>=28.1.0,<29",
]

[project.scripts]
run_dev = "fast_api_app.app:run_dev"

[dependency-groups]
dev = [
    "black>=23.7.0,<24",
    "isort>=5.12.0,<6",
    "pytest>=8.0.0,<9",
]
scripts = [
    "boto3>=1.34.74,<2",
    "tqdm>=4.66.2,<5",
    "locust>=2.27.0,<3",
]

[tool.uv]
default-groups = [
    "dev",
    "scripts",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/fast_api_app",
    "src/celery_app",
    "src/shared_lib",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/fast_api_app",
    "src/celery_app",
    "src/shared_lib",
]

[tool.hatch.build.targets.wheel.sources]
"src/fast_api_app" = "fast_api_app"
"src/celery_app" = "celery_app"
"src/shared_lib" = "shared_lib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 80

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
