[project]
name = "splat_top"
version = "0.2.0"
description = ""
authors = [{ name = "Cesar E Garza", email = "cesar@cegarza.com" }]
requires-python = ">=3.10.0, <3.12"
readme = "README.md"
dependencies = [
    "sqlalchemy>=2.0.46,<3",
    "psycopg2-binary>=2.9.11,<3",
    "python-dotenv>=1.2.1,<2",
    "celery>=5.6.2,<6",
    "redis>=5.3.1,<6",
    "fastapi>=0.110.3,<0.111",
    "uvicorn[standard]>=0.29.0,<0.30",
    "asyncpg>=0.29.0,<0.30",
    "pandas>=2.3.3,<3",
    "orjson>=3.11.7,<4",
    "slowapi>=0.1.9,<0.2",
    "gunicorn>=22.0.0,<23",
    "scipy>=1.15.3,<2",
    "cachetools>=5.5.2,<6",
    "httpx>=0.27.2,<0.28",
    "requests>=2.32.5,<3",
    "numpy>=1.26.4,<2",
    "prometheus-client>=0.24.1,<1",
    "htpasswd>=2.3",
]

[project.scripts]
run_dev = "fast_api_app.app:run_dev"

[dependency-groups]
dev = [
    "black>=23.12.1,<24",
    "isort>=5.13.2,<6",
    "pytest>=8.4.2,<9",
]
scripts = [
    "boto3>=1.42.53,<2",
    "tqdm>=4.67.3,<5",
    "locust>=2.43.3,<3",
    "ruamel.yaml>=0.18.17,<0.19",
]

[tool.uv]
default-groups = [
    "dev",
    "scripts",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/fast_api_app",
    "src/celery_app",
    "src/shared_lib",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/fast_api_app",
    "src/celery_app",
    "src/shared_lib",
]

[tool.hatch.build.targets.wheel.sources]
"src/fast_api_app" = "fast_api_app"
"src/celery_app" = "celery_app"
"src/shared_lib" = "shared_lib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 80

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
